<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sipeed_tof_ms_a010</name>
  <version>0.0.0</version>
  <description>ros2 support for MS-a010</description>
  <maintainer email="taorye@outlook.com">taorye</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
  </export>
</package>
